# nocte

./: .gitignore  README.md  pyproject.toml
nocte/: datadict.py  df_wrapper.py  events.py  extract.py  io_common.py  io_neuralynx.py  io_neuropixel.py  io_neuropixel_interp.py  paths.py  plot.py  scroll.py  spikes.py  stacks.py  timeslice.py  traces.py  trains.py
nocte/analysis/: cycles.py  entrainment.py  plot_grid.py  prc.py  prc_plot.py  sleep.py  sne.py  sne_matching.py  stim.py  switches.py  video.py  wave_detection.py  xcorr.py  xcorr_bestlags.py
nocte/io/: common.py  neuralynx.py  neuropixel.py  neuropixel_interp.py  neuropixel_writer.py  openephys.py
nocte/tests/: test_timeslice.py
